2001-08-29  Joel Sherrill <joel@OARcorp.com>

	* config.bfd (i[3456]86-*-rtems*, m68*-*-rtems*): Change 
	default from coff to elf.

2001-08-29  Jeff Law <law@redhat.com>

	* cpu-h8300.c (h8300_scan, compatible): Prototype.
	(h8300_scan): Handle architecture:machine encodings typically
	found in linker scripts.
	* elf.c (prep_headers): Do not try to do H8 machine recognition
	here.
	* elf32-h8300.c:  Add some missing prototypes.
	(elf32_h8_mach, elf32_h8_final_write_processing): New functions.
	(elf32_h8_object_p): Similarly.

2001-08-29  Alan Modra  <amodra@bigpond.net.au>

	* targmatch.sed: Delete case statements.
	* config.bfd <powerpc-*-aix* entry>: Select 64 bit xcoff for
	aix4.3 and above.

Wed Aug 29 02:27:36 2001  J"orn Rennecke <amylaar@redhat.com>

	* Makefile.am (elf32-h8300.lo): New target.
	* config.bfd (h8300*-*-elf): New case.
	* configure.in (bfd_elf32_h8300_vec): New case.
	* elf.c (prep_headers): Add case for bfd_arch_h8300.
	* reloc.c (BFD_RELOC_H8_DIR16A8): New relocation.
	(BFD_RELOC_H8_DIR16R8, BFD_RELOC_H8_DIR24A8): Likewise.
	(BFD_RELOC_H8_DIR24R8, BFD_RELOC_H8_DIR32A16): Likewise.
	* targets.c (bfd_target bfd_elf32_h8300_vec): New extern declaration.
	* elf32-h8300.c: New file.
	* Makefile.in, bfd-in2.h, libbfd.h, configure: Regenerated.

2001-08-28  Nick Clifton  <nickc@cambridge.redhat.com>

	* sparclynx.c: Add missing prototypes.
	* coff-mcore.c: Add missing prototypes.
	* elf32-pj.c: Add missing prototypes.
	* nlm32-sparc.c: Add missing prototypes.
	* oasys.c: Add missing prototypes.
	* pdp11.c: Add missing prototypes.
	* pe-mips.c: Add missing prototypes.
	* riscix.c: Add missing prototypes.

2001-08-27  Daniel Jacobowitz  <drow@mvista.com>

	* elf32-i386.c: Add missing prototypes.
	* elf32-ppc.c: Likewise.
	* elf32-sh-lin.c: Likewise.
	* elfarm-nabi.c: Likewise.

2001-08-27  Daniel Jacobowitz  <drow@mvista.com>

	* elf32-i386.c (elf_i386_grok_prstatus): New function.
	(elf_i386_grok_psinfo): New function.